# TRG

./: .flake8  .pylintrc  LICENSE  README.md  game.py  game_input.py  game_map.py  input.py  inventory.py  item.py  main.py  map.py  player.py  pyproject.toml  requirements.txt  terminal.py  type.py
data/: map.txt
scripts/: lint.sh  publish-test.sh  publish.sh
trg/: __main__.py  game.py  game_input.py  game_map.py  inventory.py  main.py  player.py
