[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trg-game"
version = "0.0.2"
authors = [
  { name="Tal", email="talwat321@gmail.com" },
]
description = "A terminal RPG"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "readchar"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/talwat/TRG"
"Bug Tracker" = "https://github.com/talwat/TRG/issues"

[project.scripts]
trg = "trg.main:main"

[tool.setuptools]
packages = ["trg"]

[tool.setuptools.package-data]
trg = ["data/*.txt"]